--- a/user/templates/master.html
+++ b/user/templates/master.html
@@ -18,11 +18,11 @@
 </head>
 
 <body>
-    <div class="header" id="mainheader">
+    <div class="header" id="mainheader" style="z-index: 2;">
         <nav class="navbar navbar-expand-lg navbar-light bg-light text-white">
             <div class="container-fluid">
                 <a class="navbar-brand text-white rounded-pill px-4 border border-success bg-success"
-                    href="index">CVforYou</a>
+                    href="/">CVforYou</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -31,13 +31,15 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-0 mx-auto fw-normal fs-6">
                         <li class="nav-item">
+                            <a class="nav-link active text-success " aria-current="page" href="/">Home</a>
+                        <li class="nav-item">
                             <a class="nav-link active text-success " aria-current="page" href="personal">Create CV</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active text-success" href="templates">CV Templates</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-success" href="#">Pricing</a>
+                            <a class="nav-link active text-success" href="pricing">Pricing</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active text-success" href="mailto:mshabeeb4@gmail.com">Contact Us</a>
