--- a/user/templates/personal.html
+++ b/user/templates/personal.html
@@ -21,16 +21,24 @@
 box-shadow: 5px 5px 15px 5px #00000086;">
     <form class="p-4"> 
         <div class="row mb-4 mt-5">
+            <div class="form-outline mb-4">
+                <input type="file" id="form3Example3" class="form-control" name="upload" accept="application/pdf" />
+                <label class="form-label" for="form3Example3">Add Your Existing Resume for Fetching datas for the form</label>
+            </div>
+            <div class="form-outline mb-4">
+                <input type="file" id="form3Example3" class="form-control" name="upload" accept="image/png,image/jpeg" />
+                <label class="form-label" for="form3Example3">Profile Image</label>
+            </div>
             <div class="col">
                 <div class="form-outline">
-                    <input type="text" id="form3Example1" class="form-control" />
-                    <label class="form-label" for="form3Example1">First Name</label>
+                    <input type="text" id="form3Example1" class="form-control" placeholder="Shabeeb M"  />
+                    <label class="form-label" for="form3Example1">Full Name</label>
                 </div>
             </div>
             <div class="col">
                 <div class="form-outline">
-                    <input type="text" id="form3Example2" class="form-control" />
-                    <label class="form-label" for="form3Example2">Last Name</label>
+                    <input type="text" id="form3Example2" class="form-control" placeholder="eg-Web Developer/UI Designer" />
+                    <label class="form-label" for="form3Example2">Tittle</label>
                 </div>
             </div>
         </div>
@@ -212,24 +220,6 @@ box-shadow: 5px 5px 15px 5px #00000086;">
             <div class="col">
                 <div class="form-outline">
                     <input type="text" id="form3Example1" class="form-control" />
-                    <label class="form-label" for="form3Example1">Driving Licence</label>
-                </div>
-            </div>
-            <div class="col">
-                <div class="form-outline">
-                    <select name="" id="" class="form-control">
-                        <option value="">Select</option>
-                        <option value="Male">Male</option>
-                        <option value="Female">Female</option>
-                    </select>
-                    <label class="form-label" for="form3Example2">Gender</label>
-                </div>
-            </div>
-        </div>
-        <div class="row mb-4">
-            <div class="col">
-                <div class="form-outline">
-                    <input type="text" id="form3Example1" class="form-control" />
                     <label class="form-label" for="form3Example1">Nationality</label>
                 </div>
             </div>
@@ -244,13 +234,27 @@ box-shadow: 5px 5px 15px 5px #00000086;">
             <div class="col">
                 <div class="form-outline">
                     <input type="text" id="form3Example1" class="form-control" />
-                    <label class="form-label" for="form3Example1">LinkedIn</label>
+                    <label class="form-label" for="form3Example1">Website</label>
                 </div>
             </div>
             <div class="col">
                 <div class="form-outline">
                     <input type="text" id="form3Example2" class="form-control" />
                     <label class="form-label" for="form3Example2">Github</label>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-4">
+            <div class="col">
+                <div class="form-outline">
+                    <input type="text" id="form3Example1" class="form-control" />
+                    <label class="form-label" for="form3Example1">LinkedIn</label>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-outline">
+                    <input type="text" id="form3Example2" class="form-control" />
+                    <label class="form-label" for="form3Example2">Stackoverflow</label>
                 </div>
             </div>
         </div>
