--- a/user/templates/templates.html
+++ b/user/templates/templates.html
@@ -7,7 +7,7 @@
     <h1 class="mt-5 mb-5 text-center pt-5">Choose Your Resume Templates</h1>
     <div class="row">
         <div class="col-lg-3 ">
-            <img src="{% static 'image/temp1.png' %}" alt="" class="tempimage">
+            <a href="resume"><img src="{% static 'image/temp1.png' %}" alt="" class="tempimage"></a>
             <div class="">
                 <small class="fw-bold fs-4 ml-4">Tech <span class="count">&nbsp; 1/12</span></small>
                 <p id="tempdesc">Apply and get shortlisted for tech jobs with the tech resume template that will impress
